# vkrender

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .ignore  CMakeLists.txt  CTestCustom.cmake  README.md  appveyor.yml  build_clang.sh  build_gcc.sh  clang-format.sh  linecount.sh  meson.build
assets/: BoomBox.glb  armadillo.glb  helmet_model.json  ice_lake.env  ice_lake_env.hdr  ice_lake_ref.hdr  main.scene  main.sdf  monkey.gltf
assets/environments/: bridge_irradiance.ktx  bridge_radiance.ktx  bridge_skybox.ktx
assets/ice_lake/: irradiance.hdr  irradiance_side_0.hdr  irradiance_side_1.hdr  irradiance_side_2.hdr  irradiance_side_3.hdr  irradiance_side_4.hdr  irradiance_side_5.hdr  radiance_0_1600x800.hdr  (+68 more)
ecs/: CMakeLists.txt
engine/: CMakeLists.txt  meson.build
engine/engine/: all.h  asset.cpp  asset.hpp  asset_manager.c  asset_manager.cpp  asset_manager.h  asset_manager.hpp  billboard.cpp  billboard.hpp  billboard_component.cpp  billboard_component.hpp  camera.c  camera.cpp  camera.h  camera.hpp  camera_component.cpp  camera_component.hpp  cmd_info.h  deserializer.c  deserializer.h  engine.c  engine.cpp  engine.h  engine.hpp  entity_manager.c  entity_manager.h  environment.c  environment.cpp  environment.h  environment.hpp  file_watcher.cpp  file_watcher.hpp  filesystem.c  filesystem.h  gltf_model.cpp  gltf_model.hpp  gltf_model_component.cpp  gltf_model_component.hpp  gltf_model_instance.cpp  gltf_model_instance.hpp  (+44 more)
engine/engine/assets/: asset_types.c  asset_types.cpp  asset_types.h  asset_types.hpp  env_file.h  environment_asset.c  environment_asset.cpp  environment_asset.h  environment_asset.hpp  gltf_asset.c  gltf_asset.h  gltf_model_asset.c  gltf_model_asset.cpp  gltf_model_asset.h  gltf_model_asset.hpp  image_asset.c  image_asset.h  mesh_asset.c  mesh_asset.cpp  mesh_asset.h  mesh_asset.hpp  pbr_material_asset.c  pbr_material_asset.cpp  pbr_material_asset.h  pbr_material_asset.hpp  pipeline_asset.c  pipeline_asset.h  shape_asset.cpp  shape_asset.hpp  texture_asset.cpp  texture_asset.hpp
engine/engine/components/: billboard_component.cpp  billboard_component.hpp  camera_component.cpp  camera_component.hpp  component_types.c  component_types.cpp  component_types.h  component_types.hpp  environment_component.cpp  environment_component.hpp  gltf_model_component.c  gltf_model_component.cpp  gltf_model_component.h  gltf_model_component.hpp  light_component.cpp  mesh_component.c  mesh_component.cpp  mesh_component.h  mesh_component.hpp  name_component.hpp  transform_component.c  transform_component.cpp  transform_component.hpp
engine/engine/comps/: comp_types.c  comp_types.h  gltf_comp.c  gltf_comp.h  gltf_model_comp.c  gltf_model_comp.h  mesh_comp.c  mesh_comp.h  point_light_comp.c  point_light_comp.h  renderable_comp.c  renderable_comp.h  terrain_comp.c  terrain_comp.h  transform_comp.c  transform_comp.h
engine/engine/linux/: linux_file_watcher.cpp  linux_file_watcher.hpp
engine/engine/systems/: billboard_system.cpp  billboard_system.hpp  entity_inspector_system.cpp  entity_inspector_system.hpp  fps_camera_system.c  fps_camera_system.cpp  fps_camera_system.h  fps_camera_system.hpp  gltf_model_system.cpp  gltf_model_system.hpp  light_system.c  light_system.h  lighting_system.cpp  lighting_system.hpp  picking_system.c  picking_system.h  rendering_system.c  rendering_system.h  skybox_system.cpp  skybox_system.hpp
engine/engine/util/: tinyktx.c  tinyktx.h
engine/vkr/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  commandbuffer.cpp  commandbuffer.hpp  context.cpp  context.hpp  descriptor_manager.cpp  descriptor_manager.hpp  gltf_model.cpp  gltf_model.hpp  logging.hpp  pipeline.cpp  pipeline.hpp  shader_compilation.cpp  smallvec.hpp  texture.cpp  texture.hpp  util.hpp  window.cpp  window.hpp
examples/: CMakeLists.txt  ecs.cpp  gltf.cpp  gltf_ecs.cpp  gltf_lit.cpp  mandelbrot.cpp  meson.build  rewrite.c  rewrite.cpp  smallvec.cpp  triangle.cpp  vkm_example.cpp  vmath_example.cpp
fstl/: CMakeLists.txt
ftl/: CMakeLists.txt
game/: CMakeLists.txt  main.cpp
renderer/: CMakeLists.txt  meson.build
renderer/renderer/: base_render_target.hpp  buffer.c  buffer.cpp  buffer.h  buffer.hpp  buffer_pool.c  buffer_pool.h  canvas.c  canvas.cpp  canvas.h  canvas.hpp  cmd_buffer.c  cmd_buffer.h  common.h  common.hpp  context.c  context.cpp  context.h  context.hpp  cubemap.c  cubemap.cpp  cubemap.h  cubemap.hpp  descriptor_manager.cpp  descriptor_manager.hpp  descriptor_set.c  descriptor_set.h  event.h  glm.hpp  hasher.c  hasher.h  image.c  image.h  imgui.c  imgui.cpp  imgui.h  imgui.hpp  limits.h  memory.c  memory.h  (+39 more)
renderer/vma/: vk_mem_alloc.h
scene/: CMakeLists.txt
sdf/: CMakeLists.txt
shaders/: Makefile  bake_cubemap.frag  bake_cubemap.vert  billboard.frag  billboard.vert  billboard_picking.frag  billboard_picking.vert  box.frag  box.vert  common.glsl  frag.spv  fullscreen.frag  fullscreen.vert  gizmo.frag  gizmo.vert  gizmo_picking.frag  gizmo_picking.vert  heightmap.vert  imgui.frag  imgui.vert  mandelbrot.frag  model.frag  model.vert  model_lit.frag  model_lit.vert  model_pbr.frag  model_pbr.vert  noise.glsl  normalmap.glsl  outline.frag  outline.vert  pbr.frag  pbr.glsl  pbr.vert  picking.frag  picking.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  (+7 more)
tests/: CMakeLists.txt
util/: CMakeLists.txt  meson.build
vkm/: CMakeLists.txt
vkr/: CMakeLists.txt
vkr/vkr/: aliases.hpp  asset_manager.cpp  asset_manager.hpp  assets.cpp  assets.hpp  billboard.cpp  billboard.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  commandbuffer.cpp  commandbuffer.hpp  context.cpp  context.hpp  descriptor.cpp  descriptor.hpp  descriptor_manager.cpp  descriptor_manager.hpp  glm.hpp  gltf_model.cpp  gltf_model.hpp  gltf_model_instance.cpp  gltf_model_instance.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  imgui_utils.cpp  imgui_utils.hpp  lighting.cpp  lighting.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  shader_compilation.hpp  texture.cpp  texture.hpp  util.hpp  vertex_format.cpp  vertex_format.hpp  (+2 more)
vmath/: CMakeLists.txt
(+104 files in other folders)
